# Ecommerce_Assistant_Challenge-2025_v2

./: .env  .gitignore  DataExploration.ipynb  README.md  Time Estimates.csv  developer_notes.txt
mock_api/: mock_api.py
services/MCP/: tools.py
services/chat_service/: LG_Tutorial.ipynb  graph.py  llm_client.py  main.py  rough_work.ipynb  tools.py
services/mcp_project/: mcp_servers.ipynb  pyproject.toml  requirements.txt  tools.py
services/order_service/: api_client.py  main.py  models.py
services/product_service/: main.py  models.py  rough_work.ipynb  utils.py  vector_store.py
