[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.15.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "gradio>=5.29.1",
    "langchain>=0.3.25",
    "langchain-cohere>=0.4.4",
    "langchain-core>=0.3.60",
    "langgraph>=0.4.5",
    "langgraph-checkpoint>=2.0.26",
    "langgraph-prebuilt>=0.1.8",
    "langgraph-sdk>=0.1.69",
    "mcp>=1.9.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]
